[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menu/PauseMenu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/ConfigControlsMenu/ControlConfigMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/MenuPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/codeman38_press-start-2p/PressStart2P.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Menu/LabelBaseModel.gd" type="Script" id=5]
[ext_resource path="res://Menu/ButtonModel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menu/ReturnShortcut.tres" type="ShortCut" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="PauseMenu" type="Control" groups=[
"pause_menu",
]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )
control_menu = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -384.0
margin_right = 512.0
margin_bottom = 384.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_left = 390.0
margin_top = 295.0
margin_right = 634.0
margin_bottom = 473.0

[node name="MenuPanel" parent="CenterContainer/MarginContainer" instance=ExtResource( 3 )]

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MarginContainer"]
margin_right = 244.0
margin_bottom = 178.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 232.0
margin_bottom = 166.0
custom_constants/separation = 38
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 220.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
text = "Pause Menu"
align = 1
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 220.0
margin_bottom = 154.0
alignment = 1

[node name="Resume" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_left = 16.0
margin_right = 204.0
margin_bottom = 22.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../RestartLevel")
shortcut = ExtResource( 7 )
text = "Resume Game"

[node name="RestartLevel" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 26.0
margin_right = 220.0
margin_bottom = 48.0
focus_neighbour_top = NodePath("../Resume")
focus_neighbour_bottom = NodePath("../Controls")
text = "Restart Level"

[node name="Controls" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_left = 40.0
margin_top = 52.0
margin_right = 180.0
margin_bottom = 74.0
focus_neighbour_top = NodePath("../RestartLevel")
focus_neighbour_bottom = NodePath("../Quit")
text = "Controls"

[node name="Quit" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_left = 32.0
margin_top = 78.0
margin_right = 188.0
margin_bottom = 100.0
focus_neighbour_top = NodePath("../Controls")
focus_neighbour_bottom = NodePath("../Resume")
text = "Quit Game"
[connection signal="pressed" from="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/RestartLevel" to="." method="_on_RestartLevel_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
